# rust-embassy-stm32f1

./: .gitignore  Cargo.toml  LICENSE  README.md  issue.md  rust-toolchain.toml
examples/: blinky.rs  exti.rs  image_i2c.rs  qei.rs  rtc.rs  simple_mpu6050.rs  text_i2c.rs
src/hardware/: gpio_button.rs  gpio_led.rs  mod.rs  mpu6050_madgwick_solver.rs  traits.rs
